<resources>
    <string name="app_name">StoryApp</string>
    <string name="hello_blank_fragment">Halo fragment kosong</string>
    <string name="lupa_password">Lupa Kata Sandi</string>
    <string name="masukkan_password">Masukkan Kata Sandi</string>
    <string name="masukkan_username">Masukkan Nama Pengguna</string>
    <string name="l_login">Masuk</string>
    <string name="button_login">Masuk</string>
    <string name="register_title">Buat Akun</string>
    <string name="hint_name">Nama</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="btn_register">Daftar</string>
    <string name="error_password_min_length">Kata sandi minimal 8 karakter</string>
    <string name="image_preview">Pratinjau Gambar</string>
    <string name="camera">Kamera</string>
    <string name="description">Deskripsi</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="button_add_story">Tambahkan Cerita</string>
    <string name="photo">Foto</string>
    <string name="app_widget">Widget Aplikasi</string>
    <string name="empty_text">Tidak ada data</string>
    <string name="login_succes">Login Berhasil</string>
    <string name="welcome">Selamat Datang Kembali</string>
    <string name="continue_">Lanjut</string>
    <string name="image_welcome">Gambar Selamat Datang</string>
    <string name="dicoding">Dicoding Story</string>
    <string name="Logout">Keluar</string>
    <string name="confim_logout">Konfirmasi Keluar</string>
    <string name="message_exit">Apakah Anda yakin ingin keluar dari aplikasi?</string>
    <string name="yes">Ya</string>
    <string name="cancel">Batal</string>
    <string name="welcome_title">Selamat datang di Dicoding Story!</string>
    <string name="welcome_description">
        Mau berbagi ilmu tentang Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding Story aja!
    </string>
    <string name="story_name">Nama </string>
    <string name="error_pass">Password tidak boleh kosong </string>
    <string name="error_pass_long">Panjang Kata Sandi Harus Minimal 8 Karakter </string>
    <string name="error_email">Email tidak boleh kosong </string>
    <string name="error_email_valid">Email harus aktif dan valid </string>
    <string name="error_username">Username Tidak boleh kosong</string>
    <string name="img_maps">Maps </string>
    <string name="hours">2 jam yang lalu </string>
</resources>
