<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".presentation.welcome.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/ivIllustration"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/welcome"
            android:contentDescription="@string/image_welcome"
            android:scaleType="fitCenter"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"/>


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_description"
            android:textSize="14sp"
            android:textColor="#555555"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:lineSpacingExtra="4dp"
            android:paddingHorizontal="12dp"/>


        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="32dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/l_login"
                android:layout_marginStart="16dp"
                android:backgroundTint="#2C3E50"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnRegister"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/register_title"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#2C3E50"
                android:textColor="#FFFFFF"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
