<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:radius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivStoryImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/image_preview"
            android:scaleType="centerCrop"
            android:transitionName="photo_big"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/story_name"
            android:transitionName="name"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="4dp"
            android:paddingVertical="10dp"
            android:layout_marginStart="12dp"
            android:transitionName="description"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
